--- a/source/_data/cards.yml
+++ b/source/_data/cards.yml
@@ -30,3 +30,12 @@ search:
   field: Post
 
 back_to_top: true
+
+comments:
+  use: gitalk
+  gitalk:
+    repo: greene-the-improver
+    owner: Wizardgreen
+    admin: ['Wizardgreen']
+    clientID: Ov23liy7twmLUE2fWNRh
+    clientSecret: 9be20dc209c2cd2e172a44c4a4dbf45b0ecbc92a
