--- a/source/_data/cards.yml
+++ b/source/_data/cards.yml
@@ -14,6 +14,7 @@ navbar:
     # - name: Page
     #   url: /page/
 cover:
+  avatar: /images/Designer-96.jpeg
   sitename: Greene The Improver
 
 style:
