--- a/source/_data/cards.yml
+++ b/source/_data/cards.yml
@@ -15,7 +15,7 @@ navbar:
     #   url: /page/
 cover:
   avatar: /images/Designer-96.jpeg
-  description: 開場白…開場白…，座右銘、人生哲理、勵志雞湯，謝謝大家。
+  description: 開場白，座右銘、人生哲理、勵志雞湯，謝謝大家。
 
 style:
   color:
